# a2a_sample

./: .gitignore  README.md  a2a_client.py  main.py  models.py  pyproject.toml  streamlit_client.py  test_completion.py
a2a_orchestrator/: __init__.py  errors.py  models.py  ports.py
a2a_server/: __init__.py  __main__.py  config.py  errors.py  executor.py  models.py
adapters/: redis_taskstore.py
orchestrator_api/: adapters.py  client.py  main.py  ports.py
tests/asgi/: test_endpoints.py
tests/contract/: test_a2a_contract.py
tests/mock/: test_execute_mock.py
tests/unit/: test_executor_logic.py
